src/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Order__c</fullName>
        <label>Inventory Order</label>
        <referenceTo>Inventory_Order__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Cost__c</fullName>
        <label>Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity_Purchased_Value__c</fullName>
        <label>Quantity Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inventory_Order__c</columns>
        <columns>Item__c</columns>
        <columns>Quantity_Purchased_Value__c</columns>
        <columns>Item_Cost__c</columns>
        <columns>Total_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>